--- a/GenerativeAdversarialNetwork/GenerativeAdversarialNetwork.csproj
+++ b/GenerativeAdversarialNetwork/GenerativeAdversarialNetwork.csproj
@@ -1,10 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <!-- 프로젝트의 타겟 프레임워크에 맞게 수정하세요 (예: net6.0, net7.0 등) -->
     <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+
+    <!--
+      System.Drawing.Common은 기본적으로 플랫폼 종속입니다.
+      - Windows 전용으로 실행한다면 RuntimeIdentifier를 설정하면 문제를 해결할 수 있습니다.
+      - 크로스플랫폼(특히 Linux/macOS)를 목표로 한다면 System.Drawing.Common 대신
+        SixLabors.ImageSharp 같은 대안을 권장합니다.
+    -->
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
 
+  <ItemGroup>
+    <!-- System.Drawing.Bitmap 사용 오류 해결: NuGet 패키지 참조 추가 -->
+    <PackageReference Include="System.Drawing.Common" Version="6.0.2" />
+  </ItemGroup>
 </Project>
